--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,7 +34,7 @@ jobs:
       - name: "Cancel active workflow"
         uses: styfle/cancel-workflow-action@0.11.0
         with:
-          all_but_latest: true
+          workflow_id: all
           access_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: "Keep only 32 nightly releases"
